Fix overlap on the right side

--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@
 
 .content {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .picture {
+  flex: 1;
   background-image: url(./images/unsplash.jpg);
   background-position: center;
   background-size: cover;
@@ -39,27 +39,28 @@
 }
 
 .right {
+  flex: 2;
   display: flex;
   flex-direction: column;
   padding: 3em;
 }
 
 .desp {
-  height: 30vh;
   font-weight: 500;
   font-size: 1.2rem;
-}
-
-.form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+  margin-bottom: 2rem;
 }
 
 .form-title {
-  grid-column: 1 / -1;
   font-weight: 500;
   font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .input {
